# type-intersections

./: Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yaml
tests/: test_type_intersections.py
type_intersections/: __init__.py
