[tool.poetry]
name = "type-intersections"
version = "0.1.1"
description = ""
authors = ["Stanislav Zmiev <szmiev2000@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ovsyanka83/type-intersections"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
typing-extensions = "*"
pyupgrade = "*"
black = "*"
autoflake = "*"
pytest = ">=7.2.1"
pytest-cov = ">=4.0.0"
isort = "*"


[tool.coverage.report]
fail_under = 100
skip_covered = true
skip_empty = true
# Taken from https://coverage.readthedocs.io/en/7.1.0/excluding.html#advanced-exclusion
exclude_lines = [
    "pragma: no cover",
    "assert_never\\(",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if False:",
    "if 0:",
    "class .*\\bProtocol\\):",
    "if __name__ == .__main__.:",
    # Impossible to cover
    # It is impossible to cover "if TYPE_CHECKING" statements because they never actually run
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "@(typing\\.)?overload",
    "__rich_repr__",
    "__repr__",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
